more bugfixes and changes
